[package]
name = "meadorc"
description = "meador scripting language compiler"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.3"
pest_derive = "2.7.3"
anyhow = "1.0.75"
thiserror = "1.0.48"
